--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
 
-  <nav class="navbar" role="navigation" aria-label="main navigation" style="display: none;">
+  <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
@@ -81,24 +81,19 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Radiance Field Gradient Scaling for Unbiased Near-Camera Training
+            <h1 class="title is-1 publication-title">Floaters No More: Radiance Field Gradient Scaling for
+Improved Near-Camera Training
             </h1>
             <div class="is-size-5 publication-authors">
-              <span class="author-block">
-                <a href="">Anonymous authors</a><sup>1</sup></span>
-              <!--
               <span class="author-block">
                 <a href="https://julienphilip.com/">Julien Philip</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://valentin.deschaintre.fr/">Valentin Deschaintre</a><sup>1</sup></span>
-              -->
             </div>
 
-            <!--
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>Adobe Research</span>
             </div>
-            -->
 
             <div class="column has-text-centered">
               <div class="publication-links">
@@ -155,7 +150,7 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <h2 class="subtitle has-text-centered">
-        Left: Original method (MipNeRF360,DVGO) without scaling.<br />Right: With our gradient scaling.
+        Left: Original method (MipNeRF360,DVGOv2) without scaling.<br />Right: With our gradient scaling.
       </h2>
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
