--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@ Improved Near-Camera Training
                     <span>Code</span>
                   </a>
                 </span>
+                <!-- Supp Mat Link. -->
+                <span class="link-block">
+                  <a href="supp/index.html" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fa fa-video"></i>
+                    </span>
+                    <span>Supplemental Materials</span>
+                  </a>
+                </span>
               </div>
 
             </div>
