--- a/index.html
+++ b/index.html
@@ -287,7 +287,13 @@ def lgradientScaling_jvp(primals, tangents):
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-  Coming Soon, see arXiv for now.
+  @inproceedings{philip23,
+    title={Floaters No More: Radiance Field Gradient Scaling for Improved Near-Camera Training}, 
+    author={Julien Philip and Valentin Deschaintre},
+    booktitle={Eurographics Symposium on Rendering},
+    month={June},
+    year={2023}
+  }
       </code></pre>
     </div>
   </section>
