--- a/index.html
+++ b/index.html
@@ -287,13 +287,17 @@ def lgradientScaling_jvp(primals, tangents):
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-  @inproceedings{philip23,
-    title={Floaters No More: Radiance Field Gradient Scaling for Improved Near-Camera Training}, 
-    author={Julien Philip and Valentin Deschaintre},
-    booktitle={Eurographics Symposium on Rendering},
-    month={June},
-    year={2023}
-  }
+        @inproceedings {10.2312:sr.20231122,
+        booktitle = {Eurographics Symposium on Rendering},
+        editor = {Ritschel, Tobias and Weidlich, Andrea},
+        title = {{Floaters No More: Radiance Field Gradient Scaling for Improved Near-Camera Training}},
+        author = {Philip, Julien and Deschaintre, Valentin},
+        year = {2023},
+        publisher = {The Eurographics Association},
+        ISSN = {1727-3463},
+        ISBN = {978-3-03868-229-5},
+        DOI = {10.2312/sr.20231122}
+        }
       </code></pre>
     </div>
   </section>
